INSTALL(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/find_flags
  DESTINATION ${GCCXML_INSTALL_ROOT_CM24}${GCCXML_DATA_DIR}/MIPSpro
  COMPONENT Development)
FILE(GLOB HEADERS 7.3/[a-z]*)
INSTALL(FILES  ${HEADERS}
  DESTINATION
  ${GCCXML_INSTALL_ROOT_CM24}${GCCXML_DATA_DIR}/MIPSpro/7.3
  COMPONENT Development)
