INSTALL(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/find_flags
  DESTINATION ${GCCXML_INSTALL_ROOT}${GCCXML_DATA_DIR}/MIPSpro
  ${GCCXML_INSTALL_COMPONENT_RUNTIME_LIBRARY})
FILE(GLOB HEADERS 7.3/[a-z]*)
FOREACH(f ${HEADERS})
  IF(NOT ${f} MATCHES "CVS|CMakeLists.txt")
    INSTALL(FILES  ${f}
      DESTINATION
      ${GCCXML_INSTALL_ROOT}${GCCXML_DATA_DIR}/MIPSpro/7.3
      ${GCCXML_INSTALL_COMPONENT_RUNTIME_LIBRARY})
  ENDIF(NOT ${f} MATCHES "CVS|CMakeLists.txt")
ENDFOREACH(f)

